[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ui/inventory_screen.gd" type="Script" id=1]
[ext_resource path="res://resources/styles/panels.tres" type="StyleBox" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="inventory_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="centered" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="hbox" type="HBoxContainer" parent="centered"]
margin_left = 166.0
margin_top = 60.0
margin_right = 858.0
margin_bottom = 540.0

[node name="slots_panel" type="Panel" parent="centered/hbox"]
margin_right = 300.0
margin_bottom = 480.0
rect_min_size = Vector2( 300, 480 )
custom_styles/panel = ExtResource( 2 )

[node name="vbox" type="VBoxContainer" parent="centered/hbox"]
margin_left = 304.0
margin_right = 692.0
margin_bottom = 480.0

[node name="items_panel" type="Panel" parent="centered/hbox/vbox"]
margin_right = 388.0
margin_bottom = 456.0
rect_min_size = Vector2( 388, 0 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="items_list" type="ItemList" parent="centered/hbox/vbox/items_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 300, 460 )
custom_styles/bg = SubResource( 1 )
max_columns = 5
fixed_icon_size = Vector2( 64, 64 )

[node name="hbox" type="HBoxContainer" parent="centered/hbox/vbox"]
margin_top = 460.0
margin_right = 388.0
margin_bottom = 480.0
alignment = 2

[node name="use_button" type="Button" parent="centered/hbox/vbox/hbox"]
margin_left = 84.0
margin_right = 234.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )
text = "Use"

[node name="drop_button" type="Button" parent="centered/hbox/vbox/hbox"]
margin_left = 238.0
margin_right = 388.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )
text = "Drop"
